--- a/Rider_index.html
+++ b/Rider_index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <a href="https://piyushkhurana2019.github.io/Rider-s-Space/"> index</a>;
     <div class="left">
         <div>
             <img src="logo2.png" alt="unable to load logo">
