--- a/Rider_index.html
+++ b/Rider_index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="https://piyushkhurana2019.github.io/Rider-s-Space/"> index</a>;
+    <a href="Rider_index.html"> index</a>;
     <div class="left">
         <div>
             <img src="logo2.png" alt="unable to load logo">
